[gd_scene load_steps=14 format=3 uid="uid://qk52qtuii62n"]

[ext_resource type="Script" path="res://Scripts/multi_choice.gd" id="1_pvu58"]
[ext_resource type="Texture2D" uid="uid://cgt72wc7v4s5j" path="res://resources/images/multiple_choice_Tasks/Frage Fenster2.0.png" id="2_l12s5"]
[ext_resource type="Texture2D" uid="uid://dtrop46rbte6k" path="res://resources/images/background/wave pattern.png" id="2_pspbb"]
[ext_resource type="Texture2D" uid="uid://b5eo0rm5s6vte" path="res://resources/images/multiple_choice_Tasks/OptionButton-A.png" id="4_btkdb"]
[ext_resource type="Texture2D" uid="uid://bdqfqru0wsav" path="res://resources/images/multiple_choice_Tasks/OptionButton-B.png" id="5_n64ty"]
[ext_resource type="Texture2D" uid="uid://dbias4c1oml1t" path="res://resources/images/multiple_choice_Tasks/OptionButton-C.png" id="6_rfm2w"]
[ext_resource type="PackedScene" uid="uid://cu2sqwh1j3cby" path="res://Scenes/pause_menu.tscn" id="7_2neo2"]
[ext_resource type="Texture2D" uid="uid://dtjog6v672vtl" path="res://resources/images/multiple_choice_Tasks/OptionButton-D.png" id="8_5rmt8"]
[ext_resource type="Texture2D" uid="uid://8m68vslnjj7r" path="res://resources/images/buttons/done.png" id="8_hnsas"]
[ext_resource type="Texture2D" uid="uid://rt20u5iqsmym" path="res://resources/images/common/pause menu/pause.png" id="8_qupoe"]
[ext_resource type="Texture2D" uid="uid://di08uaxmkwkst" path="res://resources/images/common/pause menu/backToIslands.png" id="9_o8dlw"]

[sub_resource type="Theme" id="Theme_at6sl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r2ebi"]

[node name="2d_panel" type="Node2D"]
light_mask = 0
position = Vector2(277, 197)
scale = Vector2(0.523624, 0.550261)
script = ExtResource("1_pvu58")

[node name="Tasks" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_translate = false
localize_numeral_system = false

[node name="background" type="TextureRect" parent="Tasks"]
layout_mode = 0
offset_left = -563.381
offset_top = -894.121
offset_right = 1718.62
offset_bottom = 1315.88
texture = ExtResource("2_pspbb")

[node name="TextureRect" type="TextureRect" parent="Tasks"]
layout_mode = 0
offset_left = -466.0
offset_top = -325.0
offset_right = 1266.0
offset_bottom = 737.0
scale = Vector2(1.1586, 1.05906)
auto_translate = false
localize_numeral_system = false
texture = ExtResource("2_l12s5")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Tasks"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1160.0
offset_top = -531.0
offset_right = -165.0
offset_bottom = -309.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.991455, 0.935522)
auto_translate = false
localize_numeral_system = false

[node name="Question-text" type="Label" parent="Tasks/VBoxContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_vertical = 3
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Frage"
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 139
language = "de"

[node name="answers" type="VBoxContainer" parent="Tasks"]
visible = false
layout_direction = 2
layout_mode = 2
offset_left = -269.277
offset_top = -96.3179
offset_right = 891.723
offset_bottom = 252.682
scale = Vector2(1.02604, 1)

[node name="answers_box" type="BoxContainer" parent="Tasks"]
layout_direction = 2
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -269.277
offset_top = -389.163
offset_right = -269.277
offset_bottom = -389.163
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Answer_A" type="TextureButton" parent="Tasks/answers_box"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Tasks/answers_box/Answer_A"]
layout_mode = 0
offset_left = -861.249
offset_top = 61.7894
offset_right = -765.249
offset_bottom = 145.789
mouse_default_cursor_shape = 2
texture = ExtResource("4_btkdb")
expand_mode = 1

[node name="Answer" type="Label" parent="Tasks/answers_box/Answer_A"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -748.572
offset_top = 72.6933
offset_right = 351.428
offset_bottom = 145.693
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Antwort"
vertical_alignment = 1

[node name="Answer_B" type="TextureButton" parent="Tasks/answers_box"]
layout_mode = 2
size_flags_vertical = 8
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Tasks/answers_box/Answer_B"]
layout_mode = 0
offset_left = -883.158
offset_top = 161.742
offset_right = -787.158
offset_bottom = 245.741
mouse_default_cursor_shape = 2
texture = ExtResource("5_n64ty")
expand_mode = 1

[node name="Answer" type="Label" parent="Tasks/answers_box/Answer_B"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -774.302
offset_top = 181.732
offset_right = 279.698
offset_bottom = 239.732
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Antwort"
vertical_alignment = 1

[node name="Answer_C" type="TextureButton" parent="Tasks/answers_box"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Tasks/answers_box/Answer_C"]
layout_mode = 0
offset_left = -901.249
offset_top = 259.877
offset_right = -805.254
offset_bottom = 343.877
mouse_default_cursor_shape = 2
texture = ExtResource("6_rfm2w")
expand_mode = 1

[node name="Answer" type="Label" parent="Tasks/answers_box/Answer_C"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -790.0
offset_top = 276.0
offset_right = 516.0
offset_bottom = 333.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Antwort"
vertical_alignment = 1

[node name="Answer_D" type="TextureButton" parent="Tasks/answers_box"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Tasks/answers_box/Answer_D"]
layout_mode = 0
offset_left = -921.248
offset_top = 352.56
offset_right = -825.253
offset_bottom = 436.56
size_flags_vertical = 8
mouse_default_cursor_shape = 2
texture = ExtResource("8_5rmt8")
expand_mode = 1

[node name="Answer" type="Label" parent="Tasks/answers_box/Answer_D"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -812.392
offset_top = 368.916
offset_right = 257.608
offset_bottom = 425.916
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Antwort"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="title" type="Label" parent="Tasks"]
layout_mode = 1
offset_left = 183.338
offset_top = -116.308
offset_right = 830.337
offset_bottom = -47.3084
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "title"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="quesetion_size" type="Label" parent="Tasks"]
layout_mode = 0
offset_left = 1084.75
offset_top = -12.7212
offset_right = 1186.75
offset_bottom = 10.2788
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 0
text = "question size"

[node name="show_score" type="Label" parent="Tasks"]
visible = false
layout_mode = 0
offset_left = 128.0
offset_top = 136.0
offset_right = 678.0
offset_bottom = 296.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "show score"

[node name="doneButton" type="Button" parent="Tasks"]
visible = false
texture_filter = 2
texture_repeat = 1
layout_mode = 0
offset_left = 611.126
offset_top = 714.207
offset_right = 691.126
offset_bottom = 752.207
scale = Vector2(0.75, 0.75)
theme = SubResource("Theme_at6sl")

[node name="TextureRect" type="TextureRect" parent="Tasks/doneButton"]
layout_mode = 0
offset_left = -96.7622
offset_top = -135.694
offset_right = 400.238
offset_bottom = 75.3063
mouse_default_cursor_shape = 2
texture = ExtResource("8_hnsas")
expand_mode = 1

[node name="nextQuestion" type="TextureButton" parent="Tasks"]
visible = false
layout_mode = 0
offset_left = -217.713
offset_top = 617.889
offset_right = 231.287
offset_bottom = 760.889
scale = Vector2(0.9, 0.9)
mouse_default_cursor_shape = 2

[node name="Pause" type="Button" parent="."]
offset_left = 1508.72
offset_top = -328.935
offset_right = 1626.72
offset_bottom = -210.935
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_r2ebi")
icon = ExtResource("8_qupoe")

[node name="BackToIslands" type="Button" parent="."]
offset_left = 1508.72
offset_top = -187.184
offset_right = 1626.72
offset_bottom = -69.1839
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_r2ebi")
icon = ExtResource("9_o8dlw")

[node name="PauseMenu" parent="." instance=ExtResource("7_2neo2")]
visible = false
offset_left = -567.201
offset_top = -387.089
offset_right = -567.201
offset_bottom = -387.089
scale = Vector2(2, 2)

[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="BackToIslands" to="." method="_on_back_to_islands_pressed"]
